Glow Changelog

1.6.0-rc2

* glow.widgets.AutoSuggest - Added autoPosition option to allow user to manually place the suggestion list
* glow.widgets.AutoSuggest - Improved interface when using keys to navigate suggestions, esc now restores the original value
* glow.widgets.AutoSuggest - Added new 'filter' option to allow user to modify results before they are displayed
* glow.widgets.Carousel - Fixed bug that caused Next and Previous text to be visible in Opera when images were on
* glow.widgets.AutoSuggest - Fixed bug that caused position of suggestion list to be wrong when text was zoomed in recent webkit browsers
* glow core - Fix bug in domReady code that prevented ready / onDomReady working in some browsers (eg, PS3 NetFront)

1.6.0-rc1

* glow.widgets.Timetable - Fixing bug that may result in item sizes less than 0
* glow.forms - Allow more control over ajax tests
* glow.widgets - Improving CSS load detection for widgets.css
* glow.anim - Improved memory usage for animation shortcuts
* glow.events - Added 'mouseenter' and 'mouseleave' events which don't bubble
* glow.net.Response#xml - Works in IE for application/(whatever)-xml content-type
* glow.widgets.Sortable - Better position & margin handling
* glow.dom.NodeList#position - For getting the position relative to the positioned parent
* glow.dragdrop - Improved position detection and margin handling
* glow.dom.NodeList#prop - Similar to attr, but for getting/setting node properties
* glow.embed.Flash - Generating IDs for <object> to fix a string bug in IE
* glow.net.Request#destroy - For cleaning up loadScript calls that don't have an onLoad callback
* glow.events - No longer adds a cleanup unload listener for browsers that don't need it, allows quick back & forward switching in those browsers
* glow.widgets.Carousel - Fixed issue where events would double-fire after items were added
* glow.dom.NodeList#css - Returns correct value for margin-right in modern Webkit versions